--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 					<ul>
 						<li class="active"><a href="#" data-nav-section="home">Home</a></li>
 						<li><a href="#" data-nav-section="about">About</a></li>
-						<li><a href="#" data-nav-section="services">Services</a></li>
-						<li><a href="#" data-nav-section="skills">Skills</a></li>
+						<li><a href="#" data-nav-section="services">Skills</a></li>
+						<!--<li><a href="#" data-nav-section="skills">Skills</a></li>-->
 					<!--	<li><a href="#" data-nav-section="education">Education</a></li>-->
 						<li><a href="#" data-nav-section="experience">Experience</a></li>
 						<li><a href="#" data-nav-section="work">Work</a></li>
@@ -174,7 +174,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
 										<h2>Wanna Chat! <br>Dont' Hestitate to Get in Touch!</h2>
-										<a href="#" data-nav-section="contact" class="btn-hire">Let's Talk!</a>
+										<a href="#contact" data-nav-section="contact" class="btn-hire">Let's Talk!</a>
 									</div>
 								</div>
 							</div>
@@ -275,11 +275,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<span class="colorlib-counter-label">Cups of coffee</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="356" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="8" data-speed="5000" data-refresh-interval="50"></span>
 							<span class="colorlib-counter-label">Projects</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="15000" data-speed="5000" data-refresh-interval="50"></span>
+							$<span class="colorlib-counter js-counter" data-from="0" data-to="15000" data-speed="5000" data-refresh-interval="50"></span>
 							<span class="colorlib-counter-label">Funding Raised</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
@@ -290,7 +290,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				</div>
 			</div>
 
-			<section class="colorlib-skills" data-section="skills">
+		<!--	<section class="colorlib-skills" data-section="skills">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
@@ -370,7 +370,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						</div>
 					</div>
 				</div>
-			</section>
+			</section>-->
 
 			<!-- <section class="colorlib-education" data-section="education">
 				<div class="colorlib-narrow-content">
@@ -691,7 +691,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				</div>
 			</section>
 
-			<section class="colorlib-contact" data-section="contact">
+			<section class="colorlib-contact" data-section="contact" id="contact">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
