--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/about.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Oliver Carmont</a></h1>
-				<span class="position"><a href="#">UI/UX/Designer</a> in Amsterdam</span>
+				<span class="position"><a href="#">UI/UX Designer</a> in Amsterdam</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
@@ -279,7 +279,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<span class="colorlib-counter-label">Projects</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							$<span class="colorlib-counter js-counter" data-from="0" data-to="15000" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter js-counter" data-refresh-interval="50">$</span><span class="colorlib-counter js-counter" data-from="0" data-to="15000" data-speed="5000" data-refresh-interval="50"></span>
 							<span class="colorlib-counter-label">Funding Raised</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
