--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<i class="icon-data"></i>
 								</span>
 								<div class="desc">
-									<h3>Software</h3>
+									<h3>UX Design</h3>
 									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
 								</div>
 							</div>
@@ -221,7 +221,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<i class="icon-phone3"></i>
 								</span>
 								<div class="desc">
-									<h3>Application</h3>
+									<h3>UI Design</h3>
 									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
 								</div>
 							</div>
@@ -232,7 +232,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<i class="icon-layers2"></i>
 								</span>
 								<div class="desc">
-									<h3>Graphic Design</h3>
+									<h3>Full-Stack Development</h3>
 									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
 								</div>
 							</div>
@@ -243,7 +243,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<i class="icon-data"></i>
 								</span>
 								<div class="desc">
-									<h3>Software</h3>
+									<h3>Chrome Development</h3>
 									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
 								</div>
 							</div>
@@ -254,7 +254,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<i class="icon-phone3"></i>
 								</span>
 								<div class="desc">
-									<h3>Application</h3>
+									<h3>Data Compiler</h3>
 									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
 								</div>
 							</div>
