--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 							<div class="row">
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
-										<h2>Wanna Chat! <br>Dont' Hestitate to Get in Touch!</h2>
+										<h2>Wanna Chat! <br>Get in Touch!</h2>
 										<a href="#contact" data-nav-section="contact" class="btn-hire">Let's Talk!</a>
 									</div>
 								</div>
@@ -189,7 +189,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 							<span class="heading-meta">What I do?</span>
-							<h2 class="colorlib-heading">Here are some of my expertise</h2>
+							<h2 class="colorlib-heading">My Expertise</h2>
 						</div>
 					</div>
 					<div class="row row-pt-md">
@@ -500,7 +500,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#"></a> <span>2017-2018</span></h2>
+					               	<h2><a href="#">CEO and Lead Contributor at OpenDatabase</a> <span>2017-2018</span></h2>
 					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 					               </div>
 					            </div>
@@ -512,7 +512,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">CEO and Lead Contributor at OpenDatabase</a> <span>2017-2018</span></h2>
+					               	<h2><a href="#">CEO at Carbonly</a> <span>2017-2018</span></h2>
 					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 					               </div>
 					            </div>
