--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 							<div class="row">
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
-										<h2>Wanna Chat! <br>Get in Touch!</h2>
+										<h2>Wanna Chat? <br>Get in Touch!</h2>
 										<a href="#contact" data-nav-section="contact" class="btn-hire">Let's Talk!</a>
 									</div>
 								</div>
@@ -199,7 +199,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<i class="icon-bulb"></i>
 								</span>
 								<div class="desc">
-									<h3>Innovative Ideas</h3>
+									<h3>Pioneer Mindset</h3>
 									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
 								</div>
 							</div>
@@ -254,7 +254,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<i class="icon-phone3"></i>
 								</span>
 								<div class="desc">
-									<h3>Data Compiler</h3>
+									<h3>Database Compiler</h3>
 									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
 								</div>
 							</div>
@@ -270,16 +270,16 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 					</div>
 					<div class="row">
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="309" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Cups of coffee</span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="250000" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter-label">Lines of Code</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
 							<span class="colorlib-counter js-counter" data-from="0" data-to="8" data-speed="5000" data-refresh-interval="50"></span>
 							<span class="colorlib-counter-label">Projects</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-refresh-interval="50">$</span><span class="colorlib-counter js-counter" data-from="0" data-to="15000" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Funding Raised</span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="15000" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter-label">Funding Raised ($)</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
 							<span class="colorlib-counter js-counter" data-from="0" data-to="10" data-speed="5000" data-refresh-interval="50"></span>
@@ -565,7 +565,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 										<h3><a href="work.html">NetZero Checkout</a></h3>
 										<span>Co-Founder</span>
 										<p class="icon">
-											<span><a href="#"><i class="icon-share3"></i></a></span>
+											<span><a href="https://www.netzerocheckout.com"><i class="icon-share3"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
 											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
 										</p>
@@ -580,7 +580,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 										<h3><a href="work.html">Carbonly</a></h3>
 										<span>Founder and CEO</span>
 										<p class="icon">
-											<span><a href="#"><i class="icon-share3"></i></a></span>
+											<span><a href="https://www.carbonly.org"><i class="icon-share3"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
 											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
 										</p>
@@ -595,7 +595,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 										<h3><a href="work.html">Open Database</a></h3>
 										<span>CEO And Lead Contributor</span>
 										<p class="icon">
-											<span><a href="#"><i class="icon-share3"></i></a></span>
+											<span><a href="https://www.opendatabase.io"><i class="icon-share3"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
 											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
 										</p>
@@ -607,10 +607,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 							<div class="project" style="background-image: url(images/img-4.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Work 04</a></h3>
-										<span>Application</span>
+										<h3><a href="work.html">NetZero App</a></h3>
+										<span>UX/UI Designer</span>
 										<p class="icon">
-											<span><a href="#"><i class="icon-share3"></i></a></span>
+											<span><a href="https://www.netzero.world"><i class="icon-share3"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
 											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
 										</p>
