--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<i class="icon-bulb"></i>
 								</span>
 								<div class="desc">
-									<h3>Pioneer Mindset</h3>
+									<h3>Pioneering</h3>
 									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
 								</div>
 							</div>
