--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 					</div>
 					<div class="row">
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="250000" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="15600" data-speed="5000" data-refresh-interval="50"></span>
 							<span class="colorlib-counter-label">Lines of Code</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
@@ -282,8 +282,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 							<span class="colorlib-counter-label">Funding Raised ($)</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="10" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Partners</span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="4" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter-label">Co-Founders</span>
 						</div>
 					</div>
 				</div>
@@ -695,7 +695,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<i class="icon-globe-outline"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="#">olcarmontzaragoza@gmail.com</a></p>
+									<p><a href="#">oliver@netzerocheckout.com</a></p>
 								</div>
 							</div>
 
