--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/about.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Oliver Carmont</a></h1>
-				<span class="position"><a href="#">UI/UX Designer</a> in Amsterdam</span>
+				<span class="position"><a href="#">UI Designer</a> in Amsterdam</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
