--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 							<span class="colorlib-counter-label">Lines of Code</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="8" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Projects</span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="4" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter-label">Startups</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
 							<span class="colorlib-counter js-counter" data-from="0" data-to="15000" data-speed="5000" data-refresh-interval="50"></span>
