--- a/index.html
+++ b/index.html
@@ -562,12 +562,13 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 							<div class="project" style="background-image: url(images/img-1.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">NetZero Checkout</a></h3>
+										<h3><a href="work.html" style="text-transform:none">NetZero Checkout</a></h3>
 										<span>Co-Founder</span>
 										<p class="icon">
 											<span><a href="https://www.netzerocheckout.com"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
+											<br/>
+												<p>Entered Pioneer Accelerator</p>
+												<p>Raised 15k from Fortum</p>
 										</p>
 									</div>
 								</div>
