--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Oliver Carmont</strong> On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p>
+										<p><strong>Hi I'm Oliver Carmont</strong>. I'm Spanish and Australian, but have lived the majority of my life in Amsterdam, The Netherlands. With a pioneering mindeset and eager to fight for a change, I've worked with several social startups in the attempt to create a better world. Want to collaborate? Just let me know!</p>
 									</div>
 								</div>
 							</div>
@@ -211,7 +211,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 								</span>
 								<div class="desc">
 									<h3>UX Design</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p>The greatest art never dicussed, I've been fanatical about mastering it.</p>
 								</div>
 							</div>
 						</div>
@@ -222,7 +222,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 								</span>
 								<div class="desc">
 									<h3>UI Design</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p></p>
 								</div>
 							</div>
 						</div>
@@ -232,8 +232,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<i class="icon-layers2"></i>
 								</span>
 								<div class="desc">
-									<h3>Full-Stack Development</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<h3>Full-Stack</h3>
+									<p>Working with React, Express, Mongo and Node.</p>
 								</div>
 							</div>
 						</div>
