--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 								</span>
 								<div class="desc">
 									<h3>Pioneering</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p>Entering new realms to discover how best to make a difference in this world.</p>
 								</div>
 							</div>
 						</div>
@@ -233,7 +233,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 								</span>
 								<div class="desc">
 									<h3>Full-Stack</h3>
-									<p>Working with React, Express, Mongo and Node.</p>
+									<p>Working with React, Express, Mongo and Node and more to come!</p>
 								</div>
 							</div>
 						</div>
@@ -244,7 +244,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 								</span>
 								<div class="desc">
 									<h3>Chrome Development</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p>Havin developed 3 chrome extensions over the past year, I believe they're extremely underrated!</p>
 								</div>
 							</div>
 						</div>
@@ -255,7 +255,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 								</span>
 								<div class="desc">
 									<h3>Database Compiler</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p>Data is the new gold. Shouldn't it be in all of our hands?</p>
 								</div>
 							</div>
 						</div>
