--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
 
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -48,6 +49,13 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
+
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("user_2Lld0oHqOxtCVpyJ9ehBS");
+   })();
+</script>
 
 	</head>
 	<body>
@@ -569,8 +577,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 											<br/>
 											<br/>
 											<br/>
-												<p>Entered Pioneer Accelerator</p>
-												<p>Raised 15k from Fortum</p>
+												<p style="color:#fcfcfc;">Entered Pioneer Accelerator</p>
+												<p style="color:#fcfcfc;">Raised 15k from Fortum</p>
 										</p>
 									</div>
 								</div>
@@ -584,8 +592,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 										<span>Founder and CEO</span>
 										<p class="icon">
 											<span><a href="https://www.carbonly.org"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
+										<!--	<span><a href="#"><i class="icon-eye"></i> 100</a></span>
+											<span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
 										</p>
 									</div>
 								</div>
@@ -599,8 +607,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 										<span>CEO And Lead Contributor</span>
 										<p class="icon">
 											<span><a href="https://www.opendatabase.io"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
+										<!--	<span><a href="#"><i class="icon-eye"></i> 100</a></span>
+											<span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
 										</p>
 									</div>
 								</div>
@@ -614,8 +622,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 										<span>UX/UI Designer</span>
 										<p class="icon">
 											<span><a href="https://www.netzero.world"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
+										<!--	<span><a href="#"><i class="icon-eye"></i> 100</a></span>
+											<span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
 										</p>
 									</div>
 								</div>
@@ -646,31 +654,31 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 					<div class="row">
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="blog.html" class="blog-img"><img src="images/blog-1.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="https://carbonly.org/blogs/s1e1-pilot" class="blog-img"><img src="https://res.cloudinary.com/netzero/image/upload/v1593964232/Screenshot_2020-07-05_at_17.45.00_iclrzm.png" class="img-responsive" alt="Carbonly 🌿 S1E1: Pilot Blog"></a>
 								<div class="desc">
-									<span><small>April 14, 2018 </small> | <small> Web Design </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
-									<h3><a href="blog.html">Renovating National Gallery</a></h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<span><small>July 5, 2020 </small> | <small> Carbonly </small> | <small> <i class="icon-eye"></i> 53</small></span>
+									<h3><a href="https://carbonly.org/blogs/s1e1-pilot">Carbonly 🌿 S1E1: Pilot</a></h3>
+									<p>A Browser Extension For Tracking 📈 Your Online Carbon Footprint 💨🌿️</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="blog-entry">
-								<a href="blog.html" class="blog-img"><img src="images/blog-2.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="#" class="blog-img"><img src="images/blog-2.jpg" class="img-responsive" alt="Oliver Carmont's Blog"></a>
 								<div class="desc">
-									<span><small>April 14, 2018 </small> | <small> Web Design </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
-									<h3><a href="blog.html">Wordpress for a Beginner</a></h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<span><small>October 15, 2020 </small> | <small> Web Design </small> | <small> <i class="icon-eye"></i> 0</small></span>
+									<h3><a href="#">Coming Soon...</a></h3>
+									<p>There was this one time when I...</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="blog.html" class="blog-img"><img src="images/blog-3.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="#" class="blog-img"><img src="images/blog-3.jpg" class="img-responsive" alt="Oliver Carmont's Blog"></a>
 								<div class="desc">
-									<span><small>April 14, 2018 </small> | <small> Inspiration </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
-									<h3><a href="blog.html">Make website from scratch</a></h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<span><small>December 12, 2020 </small> | <small> Category </small> | <small> <i class="icon-eye"></i> 0</small></span>
+									<h3><a href="#">Coming Soon...</a></h3>
+									<p>There was this one time when I...</p>
 								</div>
 							</div>
 						</div>
@@ -725,17 +733,18 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 								<div class="col-md-10 col-md-offset-1 col-md-pull-1 animate-box" data-animate-effect="fadeInRight">
 									<form action="">
 										<div class="form-group">
-											<input style="border-radius:10px;" type="text" class="form-control" placeholder="Name">
+											<input style="border-radius:10px;" id="name" type="text" class="form-control" placeholder="Full Name">
 										</div>
 										<div class="form-group">
-											<input style="border-radius:10px;" type="text" class="form-control" placeholder="Email">
+											<input style="border-radius:10px;" id="email" type="text" class="form-control" placeholder="Email">
 										</div>
-										<div class="form-group">
+										<!--<div class="form-group">
 											<input style="border-radius:10px;" type="text" class="form-control" placeholder="Subject">
-										</div>
+										</div>-->
 										<div class="form-group">
 											<textarea style="resize:none; border-radius:10px;" name="" id="message" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
 										</div>
+										<div style="" id="form__thankYou"></div>
 										<div class="form-group">
 											<input type="submit" class="btn btn-primary btn-send-message" value="Send Message">
 										</div>
@@ -751,6 +760,31 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 		</div><!-- end:colorlib-main -->
 	</div><!-- end:container-wrap -->
 	</div><!-- end:colorlib-page -->
+
+	<script>
+
+	document.getElementById("submitButton").addEventListener("click", function(){
+
+    document.getElementById("form__thankYou").innerText = "Thanks! We'll Contact You Shortly 👋";
+
+		let name = document.getElementById("name").value;
+		let name = document.getElementById("email").value;
+		let name = document.getElementById("message").value;
+
+
+	var template_params = {
+   "from_name": name,
+   "to_email": email,
+   "message_html": message,
+	}
+
+	var service_id = "default_service";
+	var template_id = "template_QvKeiQBr";
+	emailjs.send(service_id, template_id, template_params);
+
+	});
+
+	</script>
 
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
