--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 						<div class="col-md-7 col-md-push-1">
 							<div class="row">
 								<div class="col-md-10 col-md-offset-1 col-md-pull-1 animate-box" data-animate-effect="fadeInRight">
-									<form action="">
+									<div action="">
 										<div class="form-group">
 											<input style="border-radius:10px;" id="name" type="text" class="form-control" placeholder="Full Name">
 										</div>
@@ -746,9 +746,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 										</div>
 										<div style="" id="form__thankYou"></div>
 										<div class="form-group">
-											<input type="submit" class="btn btn-primary btn-send-message" value="Send Message">
+											<input type="submit" class="btn btn-primary btn-send-message" id="submitButton" value="Send Message">
 										</div>
-									</form>
+									</div>
 								</div>
 
 							</div>
