--- a/index.html
+++ b/index.html
@@ -765,6 +765,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 
 	document.getElementById("submitButton").addEventListener("click", function(){
 
+	alert('RAN!')
+
     document.getElementById("form__thankYou").innerText = "Thanks! We'll Contact You Shortly 👋";
 
 		let name = document.getElementById("name").value;
