--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 								</span>
 								<div class="desc">
 									<h3>UI Design</h3>
-									<p></p>
+									<p>An art I've tried masterin from scratch, it's the most valuable trait a company can have.</p>
 								</div>
 							</div>
 						</div>
@@ -765,7 +765,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 
 	document.getElementById("submitButton").addEventListener("click", function(){
 
-	alert('RAN!')
+	a8lert('RAN!')
 
     document.getElementById("form__thankYou").innerText = "Thanks! We'll Contact You Shortly 👋";
 
