--- a/index.html
+++ b/index.html
@@ -745,8 +745,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 											<textarea style="resize:none; border-radius:10px;" name="" id="message" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
 										</div>
 										<div style="" id="form__thankYou"></div>
-										<div class="form-group" id="submitButton">
-											<input type="submit" class="btn btn-primary btn-send-message" value="Send Message">
+										<div class="form-group">
+											<div id="submitButton" type="submit" class="btn btn-primary btn-send-message">Submit</div>
 										</div>
 									</div>
 								</div>
