--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 
 	document.getElementById("submitButton").addEventListener("click", function(){
 
-	a8lert('RAN!')
+	console.log('RAN!')
 
     document.getElementById("form__thankYou").innerText = "Thanks! We'll Contact You Shortly 👋";
 
