--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 								</span>
 								<div class="desc">
 									<h3>UX Design</h3>
-									<p>The greatest art never dicussed, I've been fanatical about mastering it.</p>
+									<p>The greatest art never fully appreciated, I've been fanatical about mastering it.</p>
 								</div>
 							</div>
 						</div>
