--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
 
+	<script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -82,6 +83,10 @@
 						<li><a href="#" data-nav-section="contact">Contact</a></li>
 					</ul>
 				</div>
+
+				<span class="iconify" data-icon="ps:linkedin-alt" data-inline="false"></span>
+				<span class="iconify" data-icon="bx:bxl-product-hunt" data-inline="false"></span>
+				<span class="iconify" data-icon="fa-brands:angellist" data-inline="false"></span>
 			</nav>
 
 			<div class="colorlib-footer">
@@ -495,7 +500,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">Co-Founder at NetZero Checkout</a> <span>2017-2018</span></h2>
+					                  <h2><a href="#">Co-Founder at NetZero Checkout</a> <span>Jul 2020 - Present</span></h2>
 					                  <p>Tolerably earnestly middleton extremely distrusts she boy now not. Add and offered prepare how cordial two promise. Greatly who affixed suppose but enquire compact prepare all put. Added forth chief trees but rooms think may.</p>
 					               </div>
 					            </div>
@@ -508,7 +513,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">CEO and Lead Contributor at OpenDatabase</a> <span>2017-2018</span></h2>
+					               	<h2><a href="#">CEO and Lead Contributor at OpenDatabase</a> <span>Aug 2020 - Present</span></h2>
 					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 					               </div>
 					            </div>
@@ -520,7 +525,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">CEO at Carbonly</a> <span>2017-2018</span></h2>
+					               	<h2><a href="#">CEO at Carbonly</a> <span>Mar 2020 - Jul 2020</span></h2>
 					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 					               </div>
 					            </div>
@@ -532,7 +537,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Contributor at Seeking Alpha</a> <span>2017-2018</span></h2>
+					               	<h2><a href="#">Contributor at Seeking Alpha</a> <span>Apr 2019 - Nov 2020</span></h2>
 					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 					               </div>
 					            </div>
