--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 						<li><a href="#" data-nav-section="services">Skills</a></li>
 						<!--<li><a href="#" data-nav-section="skills">Skills</a></li>-->
 					<!--	<li><a href="#" data-nav-section="education">Education</a></li>-->
-						<li><a href="#" data-nav-section="experience">Experience</a></li>
+					<!--	<li><a href="#" data-nav-section="experience">Experience</a></li> -->
 						<li><a href="#" data-nav-section="work">Work</a></li>
 						<li><a href="#" data-nav-section="blog">Blog</a></li>
 						<li><a href="#" data-nav-section="contact">Contact</a></li>
@@ -481,7 +481,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 				</div>
 			</section>-->
 
-			<section class="colorlib-experience" data-section="experience">
+		<!--	<section class="colorlib-experience" data-section="experience">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
@@ -555,7 +555,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 					   </div>
 				   </div>
 				</div>
-			</section>
+			</section>-->
 
 			<section class="colorlib-work" data-section="work">
 				<div class="colorlib-narrow-content">
