--- a/index.html
+++ b/index.html
@@ -775,8 +775,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
     document.getElementById("form__thankYou").innerText = "Thanks! We'll Contact You Shortly 👋";
 
 		let name = document.getElementById("name").value;
-		let name = document.getElementById("email").value;
-		let name = document.getElementById("message").value;
+		let email = document.getElementById("email").value;
+		let message = document.getElementById("message").value;
 
 
 	var template_params = {
