--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 										<div class="form-group">
 											<textarea style="resize:none; border-radius:10px;" name="" id="message" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
 										</div>
-										<div style="" id="form__thankYou"></div>
+										<div style="margin-top:-3px; margin-bottom:15px;" id="form__thankYou"></div>
 										<div class="form-group">
 											<div id="submitButton" type="submit" class="btn btn-primary btn-send-message">Submit</div>
 										</div>
