--- a/index.html
+++ b/index.html
@@ -115,8 +115,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Oliver</h1>
-						   					<h2>100% html5 bootstrap templates Made by <a href="https://colorlib.com/" target="_blank">colorlib.com</a></h2>
-												<p><a class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
+						   					<h2>A UI/UX Designer in Amsterdam</h2>
+												<!--<p><a class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>-->
+												<p><a class="btn btn-primary btn-learn">View Portfolio <i class="icon-briefcase3"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -130,8 +131,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
-						   					<h1>I am <br>a Designer</h1>
-												<h2>100% html5 bootstrap templates Made by <a href="https://colorlib.com/" target="_blank">colorlib.com</a></h2>
+						   					<h1>I am <br>a Pioneer</h1>
+												<h2>I've Founded 4 Startups And Have Raised 15k in Funding.</h2>
 												<p><a class="btn btn-primary btn-learn">View Portfolio <i class="icon-briefcase3"></i></a></p>
 											</div>
 					   				</div>
@@ -772,7 +773,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 
 	console.log('RAN!')
 
-    document.getElementById("form__thankYou").innerText = "Thanks! We'll Contact You Shortly 👋";
+    document.getElementById("form__thankYou").innerText = "Thanks! I'll Contact You Shortly 👋";
 
 		let name = document.getElementById("name").value;
 		let email = document.getElementById("email").value;
