--- a/index.html
+++ b/index.html
@@ -84,9 +84,11 @@
 					</ul>
 				</div>
 
+			<div style="text-align:center; align-items:center; float:center; margin-bottom:-5px;">
 				<span class="iconify" data-icon="ps:linkedin-alt" data-inline="false"></span>
 				<span class="iconify" data-icon="bx:bxl-product-hunt" data-inline="false"></span>
 				<span class="iconify" data-icon="fa-brands:angellist" data-inline="false"></span>
+			</div>
 			</nav>
 
 			<div class="colorlib-footer">
