--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
 					</ul>
 				</div>
 
-			<div style="text-align:center; align-items:center; float:center; margin-bottom:-5px;">
-				<span class="iconify" data-icon="ps:linkedin-alt" data-inline="false"></span>
-				<span class="iconify" data-icon="bx:bxl-product-hunt" data-inline="false"></span>
-				<span class="iconify" data-icon="fa-brands:angellist" data-inline="false"></span>
+			<div style="text-align:center; align-items:center; float:center; margin-bottom:-8px; margin-top:5px;">
+				<span class="iconify" style="margin-right:3px;" data-icon="ps:linkedin-alt" data-inline="false"></span>
+				<span class="iconify" style="margin-right:3px;" data-icon="bx:bxl-product-hunt" data-inline="false"></span>
+				<span class="iconify" style="margin-right:3px;" data-icon="fa-brands:angellist" data-inline="false"></span>
 			</div>
 			</nav>
 
