--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
 					</ul>
 				</div>
 
-			<div style="text-align:center; align-items:center; float:center; margin-bottom:-8px; margin-top:5px;">
-				<span class="iconify" style="margin-right:3px;" data-icon="ps:linkedin-alt" data-inline="false"></span>
-				<span class="iconify" style="margin-right:3px;" data-icon="bx:bxl-product-hunt" data-inline="false"></span>
-				<span class="iconify" style="margin-right:3px;" data-icon="fa-brands:angellist" data-inline="false"></span>
+			<div style="text-align:center; align-items:center; float:center; margin-bottom:-8px; margin-top:10px;">
+				<span class="iconify" style="margin-right:2px;" data-icon="ps:linkedin-alt" data-inline="false"></span>
+				<span class="iconify" style="margin-right:2px;" data-icon="bx:bxl-product-hunt" data-inline="false"></span>
+				<span class="iconify" style="margin-right:2px;" data-icon="fa-brands:angellist" data-inline="false"></span>
 			</div>
 			</nav>
 
@@ -119,7 +119,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 						   					<h1>Hi! <br>I'm Oliver</h1>
 						   					<h2>A UI/UX Designer in Amsterdam</h2>
 												<!--<p><a class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>-->
-												<p><a class="btn btn-primary btn-learn">View Portfolio <i class="icon-briefcase3"></i></a></p>
+												<p><a href="#work" class="btn btn-primary btn-learn">View Projects <i class="icon-briefcase3"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -135,7 +135,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 					   					<div class="desc">
 						   					<h1>I am <br>a Pioneer</h1>
 												<h2>I've Founded 4 Startups And Have Raised 15k in Funding.</h2>
-												<p><a class="btn btn-primary btn-learn">View Portfolio <i class="icon-briefcase3"></i></a></p>
+												<p><a href="#work" class="btn btn-primary btn-learn">View Projects <i class="icon-briefcase3"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
