--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
 						   					<h1>I am <br>a Pioneer</h1>
-												<h2>I've Founded 4 Startups And Have Raised 15k in Funding.</h2>
+												<h2>I've Founded 4 Social Startups For a Better Future.</h2>
 												<p><a href="#work" class="btn btn-primary btn-learn">View Projects <i class="icon-briefcase3"></i></a></p>
 											</div>
 					   				</div>
@@ -754,7 +754,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 										</div>
 										<div style="margin-top:-3px; margin-bottom:15px;" id="form__thankYou"></div>
 										<div class="form-group">
-											<div id="submitButton" type="submit" class="btn btn-primary btn-send-message">Submit</div>
+											<div id="submitButton" type="submit" style="border-radius:30px; margin-left:1px;" class="btn btn-primary btn-send-message">Submit</div>
 										</div>
 									</div>
 								</div>
