--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 				</div>
 
 			<div style="text-align:center; align-items:center; float:center; margin-bottom:-8px; margin-top:10px;">
-				<span class="iconify" style="margin-right:2px;" data-icon="ps:linkedin-alt" data-inline="false"></span>
-				<span class="iconify" style="margin-right:2px;" data-icon="bx:bxl-product-hunt" data-inline="false"></span>
-				<span class="iconify" style="margin-right:2px;" data-icon="fa-brands:angellist" data-inline="false"></span>
+				<a href="https://www.linkedin.com/in/oliver-carmont/" style="margin-right:2px; cursor:pointer;"><span class="iconify" data-icon="ps:linkedin-alt" data-inline="false"></span></a>
+				<a href="https://www.producthunt.com/@oliver_carmont" style="margin-right:2px; cursor:pointer;"><span class="iconify" data-icon="bx:bxl-product-hunt" data-inline="false"></span></a>
+				<a href="https://angel.co/u/ocarmont" style="margin-right:2px; cursor:pointer;"><span class="iconify" data-icon="fa-brands:angellist" data-inline="false"></span></a>
 			</div>
 			</nav>
 
@@ -169,13 +169,13 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
 									<div class="services color-2">
 										<span class="icon2"><i class="icon-globe-outline"></i></span>
-										<h3>Projects</h3>
+										<h3>Graphic Design</h3>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInTop">
 									<div class="services color-3">
 										<span class="icon2"><i class="icon-data"></i></span>
-										<h3>Graphic Deign</h3>
+										<h3>Data Compiler</h3>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInBottom">
@@ -259,8 +259,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<i class="icon-data"></i>
 								</span>
 								<div class="desc">
-									<h3>Chrome Development</h3>
-									<p>Havin developed 3 chrome extensions over the past year, I believe they're extremely underrated!</p>
+									<h3>Database Compiler</h3>
+									<p>Data is the new gold. So, shouldn't it be in all of our hands?</p>
 								</div>
 							</div>
 						</div>
@@ -270,8 +270,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<i class="icon-phone3"></i>
 								</span>
 								<div class="desc">
-									<h3>Database Compiler</h3>
-									<p>Data is the new gold. Shouldn't it be in all of our hands?</p>
+									<h3>Chrome Development</h3>
+									<p>Having developed 3 Chrome extensions over the past year, I believe they're extremely underrated!</p>
 								</div>
 							</div>
 						</div>
