--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
 					</ul>
 				</div>
 
-			<div style="text-align:center; align-items:center; float:center; margin-bottom:-8px; margin-top:10px;">
-				<a href="https://www.linkedin.com/in/oliver-carmont/" style="margin-right:2px; cursor:pointer;"><span class="iconify" data-icon="ps:linkedin-alt" data-inline="false"></span></a>
-				<a href="https://www.producthunt.com/@oliver_carmont" style="margin-right:2px; cursor:pointer;"><span class="iconify" data-icon="bx:bxl-product-hunt" data-inline="false"></span></a>
-				<a href="https://angel.co/u/ocarmont" style="margin-right:2px; cursor:pointer;"><span class="iconify" data-icon="fa-brands:angellist" data-inline="false"></span></a>
+			<div style="text-align:center; align-items:center; float:center; margin-bottom:-8px; margin-top:18px;">
+				<a href="https://www.linkedin.com/in/oliver-carmont/" style="margin-right:3px; cursor:pointer;"><span class="iconify" data-icon="ps:linkedin-alt" data-inline="false"></span></a>
+				<a href="https://www.producthunt.com/@oliver_carmont" style="margin-right:3px; cursor:pointer;"><span class="iconify" data-icon="bx:bxl-product-hunt" data-inline="false"></span></a>
+				<a href="https://angel.co/u/ocarmont" style="margin-right:3px; cursor:pointer;"><span class="iconify" data-icon="fa-brands:angellist" data-inline="false"></span></a>
 			</div>
 			</nav>
 
@@ -560,7 +560,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 				</div>
 			</section>-->
 
-			<section class="colorlib-work" data-section="work">
+			<section class="colorlib-work" data-section="work" id="work">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
@@ -578,15 +578,14 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 							<div class="project" style="background-image: url(images/img-1.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html" style="text-transform:none">NetZero Checkout</a></h3>
+										<h3><a href="https://www.netzerocheckout.com" style="text-transform:none">NetZero Checkout</a></h3>
 										<span>Co-Founder</span>
+										<br/>
+										<br/>
+										<p style="color:#fcfcfc;">Entered Pioneer Accelerator</p>
+										<p style="color:#fcfcfc;">Raised 15k from Fortum</p>
 										<p class="icon">
 											<span><a href="https://www.netzerocheckout.com"><i class="icon-share3"></i></a></span>
-											<br/>
-											<br/>
-											<br/>
-												<p style="color:#fcfcfc;">Entered Pioneer Accelerator</p>
-												<p style="color:#fcfcfc;">Raised 15k from Fortum</p>
 										</p>
 									</div>
 								</div>
@@ -596,7 +595,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 							<div class="project" style="background-image: url(images/img-2.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Carbonly</a></h3>
+										<h3><a href="https://www.carbonly.org">Carbonly</a></h3>
 										<span>Founder and CEO</span>
 										<p class="icon">
 											<span><a href="https://www.carbonly.org"><i class="icon-share3"></i></a></span>
@@ -611,7 +610,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 							<div class="project" style="background-image: url(images/img-3.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Open Database</a></h3>
+										<h3><a href="https://www.opendatabase.io">Open Database</a></h3>
 										<span>CEO And Lead Contributor</span>
 										<p class="icon">
 											<span><a href="https://www.opendatabase.io"><i class="icon-share3"></i></a></span>
@@ -626,7 +625,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 							<div class="project" style="background-image: url(images/img-4.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">NetZero App</a></h3>
+										<h3><a href="https://www.netzero.world">NetZero App</a></h3>
 										<span>UX/UI Designer</span>
 										<p class="icon">
 											<span><a href="https://www.netzero.world"><i class="icon-share3"></i></a></span>
