--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 										</div>
 										<div style="margin-top:-3px; margin-bottom:15px;" id="form__thankYou"></div>
 										<div class="form-group">
-											<div id="submitButton" type="submit" style="border-radius:30px; margin-left:1px;" class="btn btn-primary btn-send-message">Submit</div>
+											<div id="submitButton" type="submit" style="border-radius:30px; margin-left:1px; margin-top:2px; padding:3px;" class="btn btn-primary btn-send-message">Submit</div>
 										</div>
 									</div>
 								</div>
